[Cashtab] Improve minified nav header to prevent content jumping
Summary:
T3564

Use position: sticky to stop content jumping when the minified header is activated.

Test Plan:
`npm test`

visit https://cashtab-local-dev.netlify.app/ and scroll, no content jumping

Reviewers: #bitcoin_abc, emack

Reviewed By: #bitcoin_abc, emack

Subscribers: emack

Differential Revision: https://reviews.bitcoinabc.org/D16122

--- a/cashtab/src/components/App/App.css
+++ b/cashtab/src/components/App/App.css
@@ -54,5 +54,4 @@ input[type='number'] {
 html,
 body {
     max-width: 100%;
-    overflow-x: hidden;
 }
